--- a/resources/sass/customer/components/_forms.scss
+++ b/resources/sass/customer/components/_forms.scss
@@ -11,3 +11,23 @@
     padding: 20px;
     box-shadow: rgb(182 182 182 / 18%) 1px 1px 20px 3px;
 }
+
+.text-required {
+    color: #f00;
+}
+
+.form-datalist {
+    position: absolute;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 0 0 5px 5px;
+    border-top: none;
+    font-family: sans-serif;
+    width: 350px;
+    padding: 5px;
+    max-height: 10rem;
+    overflow-y: auto;
+    option {
+        background: red;
+    }
+}
