--- a/resources/sass/customer/base/_font.scss
+++ b/resources/sass/customer/base/_font.scss
@@ -25,3 +25,10 @@
     font-style: normal;
     font-display: block;
 }
+
+@font-face {
+    font-family: 'Nunito';
+    src: url(/fonts/Nunito-VariableFont_wght.ttf);
+    font-style: normal;
+    font-display: block;
+}
