--- a/resources/sass/customer/base/_reset.scss
+++ b/resources/sass/customer/base/_reset.scss
@@ -1,15 +1,15 @@
 body {
-    font-family: 'rbt-l';
+    font-family: 'Nunito';
     font-size: 16px;
 }
 
 a {
     text-decoration: none;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
 }
-
