--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -41,6 +41,7 @@
 @import './components/button';
 @import './components/forms';
 @import './components/line';
+@import './components/data-list';
 
 /**======================*
     Import pages
