--- a/public/customer/css/style.css
+++ b/public/customer/css/style.css
@@ -11374,6 +11374,15 @@ a {
 *========================*/
 header {
   box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.08);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  background: #fff;
+}
+header .navbar {
+  z-index: 9999;
 }
 header .navbar .logo {
   width: 80px;
@@ -11400,6 +11409,10 @@ header .navbar-collapse .nav-item .nav-link.active {
 }
 header .navbar .navbar-toggler {
   color: #3498DB;
+}
+
+main {
+  margin-top: 96px;
 }
 
 /**======================*
@@ -11443,22 +11456,6 @@ header .navbar .navbar-toggler {
   color: #f00;
 }
 
-.form-datalist {
-  position: absolute;
-  background-color: white;
-  border: 1px solid blue;
-  border-radius: 0 0 5px 5px;
-  border-top: none;
-  font-family: sans-serif;
-  width: 350px;
-  padding: 5px;
-  max-height: 10rem;
-  overflow-y: auto;
-}
-.form-datalist option {
-  background: red;
-}
-
 .line__hover:before {
   position: absolute;
   content: "";
@@ -11476,15 +11473,55 @@ header .navbar .navbar-toggler {
   transform-origin: left;
 }
 
+.input-datalist ~ .dropdown-menu {
+  margin-top: 3px !important;
+  width: 100%;
+  height: 200px;
+  overflow: auto;
+}
+.input-datalist ~ .dropdown-menu::-webkit-scrollbar {
+  width: 5px;
+}
+.input-datalist ~ .dropdown-menu::-webkit-scrollbar:hover {
+  width: 8px;
+}
+.input-datalist ~ .dropdown-menu::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.input-datalist ~ .dropdown-menu::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+  /* Handle on hover */
+}
+.input-datalist ~ .dropdown-menu::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.input-datalist ~ .dropdown-menu li {
+  padding: 5px 8px;
+  cursor: pointer;
+}
+.input-datalist ~ .dropdown-menu li:hover {
+  background-color: #3498DB;
+  color: #fff;
+}
+
 /**======================*
     Import pages
 *========================*/
 form.form-post .tab-info {
   background-color: #fff;
+  padding: 10px 30px;
+  box-shadow: 1px 10px 32px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  border-radius: 3px;
 }
 form.form-post .tab-info .title {
   font-size: 20px;
   font-weight: bold;
+}
+form.form-post .tab-info label:not(.floating) {
+  font-weight: bold;
+  font-size: 14px;
 }
 
 /* Extra small devices (phones, 992px and down) */
