--- a/resources/sass/customer/layout/_header.scss
+++ b/resources/sass/customer/layout/_header.scss
@@ -1,13 +1,20 @@
 header {
-    box-shadow:  0px 16px 24px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.08);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    background: $white;
     .navbar {
+        z-index: 9999;
         .logo {
             width: 80px;
             img {
                 width: 100%;
             }
         }
-        &-collapse{
+        &-collapse {
             margin-left: 80px;
             .nav-item {
                 &:not(:last-child) {
@@ -26,10 +33,8 @@ header {
                 }
             }
         }
-        
         .navbar-toggler {
             color: $primary;
         }
     }
 }
-
