--- a/resources/sass/customer/components/_data-list.scss
+++ b/resources/sass/customer/components/_data-list.scss
@@ -2,7 +2,7 @@
     &~.dropdown-menu {
         margin-top: 3px !important;
         width: 100%;
-        height: 200px;
+        max-height: 200px;
         overflow: auto;
         &::-webkit-scrollbar {
             width: 5px;
