--- a/resources/sass/customer/layout/_modal.scss
+++ b/resources/sass/customer/layout/_modal.scss
@@ -20,7 +20,7 @@
     }
 }
 .modal-header{
-    padding: 1rem 2rem 0 !important;
+    padding: 2rem 2rem 0 !important;
     border-bottom: none!important;
 }
 .modal-body{
@@ -28,4 +28,7 @@
 }
 .box__login__helper{
     justify-content: space-between;
+}
+.btn__border{
+    border: 1px solid #bdc3c7 !important;
 }
