--- a/resources/sass/customer/layout/_header.scss
+++ b/resources/sass/customer/layout/_header.scss
@@ -21,7 +21,7 @@ header {
                     margin-right: 40px;
                 }
                 .nav-link {
-                    color: $text-dark;
+                    color: $black;
                     font-size: 1rem;
                     &:hover {
                         color: $primary;
