--- a/public/customer/css/style.css
+++ b/public/customer/css/style.css
@@ -11502,38 +11502,6 @@ main {
   transform-origin: left;
 }
 
-.input-datalist ~ .dropdown-menu {
-  margin-top: 3px !important;
-  width: 100%;
-  max-height: 200px;
-  overflow: auto;
-}
-.input-datalist ~ .dropdown-menu::-webkit-scrollbar {
-  width: 5px;
-}
-.input-datalist ~ .dropdown-menu::-webkit-scrollbar:hover {
-  width: 8px;
-}
-.input-datalist ~ .dropdown-menu::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-.input-datalist ~ .dropdown-menu::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 6px;
-  /* Handle on hover */
-}
-.input-datalist ~ .dropdown-menu::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-.input-datalist ~ .dropdown-menu li {
-  padding: 5px 8px;
-  cursor: pointer;
-}
-.input-datalist ~ .dropdown-menu li:hover {
-  background-color: #3498DB;
-  color: #fff;
-}
-
 /**======================*
     Import pages
 *========================*/
@@ -11551,6 +11519,30 @@ form.form-post .tab-info .title {
 form.form-post .tab-info label:not(.floating) {
   font-weight: bold;
   font-size: 14px;
+}
+form.form-post .tab-info .type-post {
+  display: flex;
+}
+form.form-post .tab-info .type-post .form-check {
+  width: 50%;
+  text-align: center;
+  padding: 0;
+}
+form.form-post .tab-info .type-post .form-check input[type=radio] ~ label {
+  width: 100%;
+  padding: 5px 0;
+  border: 1px solid #cacaca;
+  border-radius: 3px;
+  cursor: pointer;
+  color: #999999;
+}
+form.form-post .tab-info .type-post .form-check input[type=radio] ~ label:hover {
+  background: #e1e1e1;
+  color: #000;
+}
+form.form-post .tab-info .type-post .form-check input[type=radio]:checked ~ label {
+  color: #000;
+  background: #e1e1e1;
 }
 
 /* Extra small devices (phones, 992px and down) */
