--- a/resources/sass/customer/pages/_post.scss
+++ b/resources/sass/customer/pages/_post.scss
@@ -13,5 +13,31 @@ form.form-post {
             font-weight: bold;
             font-size: 14px;
         }
+        .type-post{
+            display: flex;
+            .form-check{
+                width: 50%;
+                text-align: center;
+                padding: 0;
+                input[type=radio]{
+                    &~label{
+                        width:100%;
+                        padding: 5px 0;
+                        border: 1px solid #cacaca;
+                        border-radius: 3px;
+                        cursor: pointer;
+                        color: rgb(153, 153, 153);
+                        &:hover{
+                            background: #e1e1e1;
+                            color: $black;
+                        }
+                    }
+                    &:checked~label{
+                        color: $black;
+                    background: #e1e1e1;
+                    }
+                }
+            }
+        }
     }
 }
