--- a/resources/sass/customer/components/_button.scss
+++ b/resources/sass/customer/components/_button.scss
@@ -19,3 +19,24 @@
 .btn__auth {
     color: #3498db !important;
 }
+
+.input-group-step{
+    .input-group-btn{
+        button{
+            background: $primary;
+            color: $white;
+            padding: 3px 6px;
+            border-radius: 3px;
+            border: none;
+            &:disabled{
+                background: #3498db99;
+            }
+        }
+    }
+    .input-step{
+        border-radius: 5px;
+        padding: 0 8px !important;
+        margin: 0 10px !important;
+        text-align:center;
+    }
+}
