--- a/resources/sass/customer/pages/_post.scss
+++ b/resources/sass/customer/pages/_post.scss
@@ -13,45 +13,105 @@ form.form-post {
             font-weight: bold;
             font-size: 14px;
         }
-        .type-post{
+        .type-post {
             display: flex;
-            .form-check{
+            .form-check {
                 width: 50%;
                 text-align: center;
                 padding: 0;
-                input[type=radio]{
-                    &~label{
-                        width:100%;
+                input[type=radio] {
+                    &~label {
+                        width: 100%;
                         padding: 5px 0;
                         border: 1px solid #cacaca;
                         border-radius: 3px;
                         cursor: pointer;
                         color: rgb(153, 153, 153);
-                        &:hover{
+                        &:hover {
                             background: #e1e1e1;
                             color: $black;
                         }
                     }
-                    &:checked~label{
+                    &:checked~label {
                         color: $black;
-                    background: #e1e1e1;
+                        background: #e1e1e1;
                     }
                 }
             }
         }
-        .sub-title{
+        .sub-title {
             font-size: 13px;
             color: $black;
             opacity: 0.7;
             font-weight: 500;
             display: flex;
             align-items: center;
-            .line{
+            .line {
                 border-top: 1px solid $black;
                 height: 1px;
                 opacity: 0.2;
                 flex: 1 1 0%;
                 margin-left: 10px;
+            }
+        }
+    }
+    .image-video {
+        p {
+            font-size: 13px;
+            margin-top: 1rem;
+        }
+        .box-upload {
+            width: 100%;
+            height: 200px;
+            border: 1px dashed $primary;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            cursor: pointer;
+            box-shadow: inset 0 0 20px #e1e1e1;
+            i {
+                font-size: 3rem;
+                color: #8c8c8c;
+            }
+        }
+        .review-image-upload {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 1rem;
+            .card {
+                &-img {
+                    height: 250px;
+                    position: relative;
+                    &-top {
+                        height: 100%;
+                    }
+                    .actions {
+                        position: absolute;
+                        top: 5px;
+                        right: 5px;
+                        padding: 5px 5px 1px;
+                        background: #2e2e2e6e;
+                        border-radius: 2px;
+                        i {
+                            font-size: 1.125rem;
+                            color: $white;
+                            cursor: pointer;
+                            transition: all 0.2s;
+                            &:hover {
+                                transform: scale(1.1);
+                            }
+                        }
+                    }
+                }
+                &-body {
+                    padding: 0;
+                    input {
+                        padding: 0.375rem 0.85rem !important;
+                        box-shadow: none;
+                    }
+                }
             }
         }
     }
