--- a/public/customer/css/style.css
+++ b/public/customer/css/style.css
@@ -11431,6 +11431,13 @@ input.form-control, select {
   border: 1px solid #bdc3c7 !important;
 }
 
+.footer {
+  background-color: #95a5a6;
+}
+.footer #logo-footer {
+  width: 100%;
+}
+
 /**======================*
     Import components
 *========================*/
