--- a/resources/sass/customer/base/_font.scss
+++ b/resources/sass/customer/base/_font.scss
@@ -32,3 +32,11 @@
     font-style: normal;
     font-display: block;
 }
+
+
+@font-face {
+    font-family: 'Nunito-bi';
+    src: url(/fonts/NunitoSans-BlackItalic.ttf);
+    font-style: normal;
+    font-display: block;
+}
