--- a/resources/sass/customer/layout/_footer.scss
+++ b/resources/sass/customer/layout/_footer.scss
@@ -1,6 +1,103 @@
 .footer{
-    background-color: #95a5a6;
-    #logo-footer{
-        width: 100%;
+    position: relative;
+    padding: 30px 0 50px;
+    background-color: #ecf0f1;
+    .logo__foter{
+        .logo{
+            #logo-footer{
+                width: 100px;
+            }
+        }
+    }
+    .company__title{
+        text-transform: uppercase !important;
+    }
+    .box__ul{
+        padding-left: 0 !important;
+    }
+    .box-input-group{
+        position: relative;
+        input{
+            border-radius: 30px;
+        }
+        .input-group-icon{
+            position: absolute;
+            z-index: 9999;
+            cursor: pointer;
+            right: 0;
+            top: 29%;
+            bottom: 50%;
+            transform: translate(-50%, -50%);
+            i{
+                padding: 8px;
+                border-radius: 20px;
+                background-color: #e74c3c;
+                color: #fff;
+                transition: 1s;
+                &:hover{
+                    transform: rotate(360deg);
+                }
+            }
+        }
+    }
+    .icon__footer{
+        margin-right: 10px;
+        font-size: 35px;
+    }
+    .title__hotline{
+        color: #7f8c8d;
+        font-size: 13px;
+    }
+    .content__hotline{
+        font-size: 15px;
+    }
+    a{
+        color:#2c3e50;
+    }
+    ul li{
+        margin-top: 10px;
+        a{
+            font-size: 14px;
+            &:hover{
+                color: #000;
+            }
+        }
+    }
+    .social__network{
+        display: flex;
+        li{
+        margin-top:6px;
+        a{
+            img{
+                padding: 10px;
+                width: 60px;
+                transition: 1s;
+                &:hover{
+                    transform: rotate(360deg);
+                }
+            }
+        }
+    }
+
+    }
+    .footer__bottom{
+        padding: 5px 0;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        p{
+            padding: 0 0 7px;
+        }
+    }
+    h5{
+        font-weight: 600;
+    }
+    .logan{
+        font-family: Nunito-bi;
+        font-size: 16px;
+        text-transform: uppercase;
+        color: #2980b9;
+        text-shadow: 1px 1px 1px #f1c40f;
     }
 }
