--- a/public/customer/css/style.css
+++ b/public/customer/css/style.css
@@ -11512,6 +11512,7 @@ input.form-control, select {
   margin-top: 6px;
 }
 .footer .social__network li a img {
+  margin-left: -10px;
   padding: 10px;
   width: 60px;
   transition: 1s;
