--- a/resources/sass/customer/layout/_footer.scss
+++ b/resources/sass/customer/layout/_footer.scss
@@ -69,6 +69,7 @@
         margin-top:6px;
         a{
             img{
+                margin-left: -10px;
                 padding: 10px;
                 width: 60px;
                 transition: 1s;
