--- a/resources/sass/customer/layout/_header.scss
+++ b/resources/sass/customer/layout/_header.scss
@@ -1,6 +1,6 @@
 header {
     box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.08);
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
