--- a/resources/sass/customer/layout/_footer.scss
+++ b/resources/sass/customer/layout/_footer.scss
@@ -31,7 +31,7 @@
             i{
                 padding: 8px;
                 border-radius: 20px;
-                background-color: #e74c3c;
+                background-color: #3498db;
                 color: #fff;
                 transition: 1s;
                 &:hover{
