--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -30,6 +30,7 @@
 *========================*/
 
 @import './layout/header';
+@import './layout/article';
 @import './layout/main';
 @import './layout/grid';
 @import './layout/footer';
