--- a/resources/sass/customer/layout/_article.scss
+++ b/resources/sass/customer/layout/_article.scss
@@ -1,7 +1,6 @@
 
 .box__article{
     cursor: pointer;
-    object-fit: cover;
     .card__article__body{
         color: #2c3e50 !important;
         h5{
@@ -24,6 +23,21 @@
 
         .card__heart.active{
             color: #e74c3c;
+        }
+    }
+    .card-img-top{
+        height: 200px;
+        object-fit: cover;
+    }
+
+    @media only screen and (max-width: 768px){
+        .card-img-top{
+            height: 250px;
+        }
+    }
+    @media only screen and (max-width: 600px){
+        .card-img-top{
+            height: 220px;
         }
     }
 }
