--- a/resources/sass/customer/components/_button.scss
+++ b/resources/sass/customer/components/_button.scss
@@ -12,6 +12,7 @@
     border-color: #2980b9;
     &:hover {
         background-color: #2980b9;
+        box-shadow: 0 5px 10px 2px #3498db40 !important;
         color: #fff!important;
     }
 }
