--- a/public/customer/css/style.css
+++ b/public/customer/css/style.css
@@ -11284,6 +11284,243 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus {
+  outline: none;
+}
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+.slick-track:after {
+  clear: both;
+}
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+[dir=rtl] .slick-slide {
+  float: right;
+}
+.slick-slide img {
+  display: block;
+}
+.slick-slide.slick-loading img {
+  display: none;
+}
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+.slick-initialized .slick-slide {
+  display: block;
+}
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url(/images/vendor/slick-carousel/slick/ajax-loader.gif?fb6f3c230cb846e25247dfaa1da94d8f) center center no-repeat;
+}
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url(/fonts/vendor/slick-carousel/slick/slick.eot?a4e97f5a2a64f0ab132323fbeb33ae29);
+  src: url(/fonts/vendor/slick-carousel/slick/slick.eot?a4e97f5a2a64f0ab132323fbeb33ae29?#iefix) format("embedded-opentype"), url(/fonts/vendor/slick-carousel/slick/slick.woff?295183786cd8a138986521d9f388a286) format("woff"), url(/fonts/vendor/slick-carousel/slick/slick.ttf?c94f7671dcc99dce43e22a89f486f7c2) format("truetype"), url(/fonts/vendor/slick-carousel/slick/slick.svg?2630a3e3eab21c607e21576571b95b9d#slick) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none;
+}
+.slick-prev:hover, .slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent;
+}
+.slick-prev:hover:before, .slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: 0.25;
+}
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: white;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+  left: -25px;
+}
+[dir=rtl] .slick-prev {
+  left: auto;
+  right: -25px;
+}
+.slick-prev:before {
+  content: "←";
+}
+[dir=rtl] .slick-prev:before {
+  content: "→";
+}
+
+.slick-next {
+  right: -25px;
+}
+[dir=rtl] .slick-next {
+  left: -25px;
+  right: auto;
+}
+.slick-next:before {
+  content: "→";
+}
+[dir=rtl] .slick-next:before {
+  content: "←";
+}
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none;
+}
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1;
+}
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "•";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+
 /**======================*
     Import abstracts
 *========================*/
@@ -11424,6 +11661,71 @@ header .navbar .navbar-toggler {
   color: #3498DB;
 }
 
+.text__title {
+  text-transform: uppercase;
+}
+
+.padding-article {
+  padding: 12px;
+}
+
+.box__article {
+  cursor: pointer;
+}
+.box__article .card-image {
+  overflow: hidden;
+}
+.box__article .card__article__body {
+  color: #2c3e50 !important;
+}
+.box__article .card__article__body h5, .box__article .card__article__body .h5 {
+  font-size: 16px;
+}
+.box__article .card__article__body .card__time {
+  font-size: 13px;
+  color: #7f8c8d !important;
+}
+.box__article .card__article__body .card__title {
+  margin-bottom: 0.5rem;
+  font-size: 16px !important;
+}
+.box__article .card__article__body .card__title:hover {
+  color: #2980b9;
+}
+.box__article .card__article__body .card__address {
+  font-size: 15px !important;
+}
+.box__article .card__article__body .card__heart {
+  font-size: 30px;
+}
+.box__article .card__article__body .card__heart.active {
+  color: #e74c3c;
+}
+.box__article .card-img-top {
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: 0.7s;
+}
+.box__article:hover .card-img-top {
+  transform: scale(1.1);
+}
+@media only screen and (max-width: 768px) {
+  .box__article .card-img-top {
+    height: 250px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .box__article .card-img-top {
+    height: 220px;
+  }
+}
+
+.slick-prev:before, .slick-next:before {
+  color: #2c3e50 !important;
+  font-size: 25px !important;
+}
+
 .btn {
   border-radius: 30px !important;
 }
@@ -11439,6 +11741,35 @@ select {
 
 .btn__border {
   border: 1px solid #bdc3c7 !important;
+}
+
+.text-split-2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+}
+
+.text-split-1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+}
+
+.btn__see__more:hover {
+  background-color: #3498db;
+  box-shadow: 0 5px 10px 2px #3498db40 !important;
+  color: #fff;
+}
+
+.btn__blue {
+  background-color: #3498db;
+  box-shadow: 0 5px 10px 2px #3498db40 !important;
 }
 
 .footer {
@@ -11473,7 +11804,7 @@ select {
 .footer .box-input-group .input-group-icon i {
   padding: 8px;
   border-radius: 20px;
-  background-color: #e74c3c;
+  background-color: #3498db;
   color: #fff;
   transition: 1s;
 }
@@ -11557,6 +11888,7 @@ select {
 }
 .btn__outline__blue:hover {
   background-color: #2980b9;
+  box-shadow: 0 5px 10px 2px #3498db40 !important;
   color: #fff !important;
 }
 
