--- a/resources/sass/customer/layout/_article.scss
+++ b/resources/sass/customer/layout/_article.scss
@@ -1,4 +1,7 @@
-
+.card{
+    border: none;
+    box-shadow: 0px 5px 20px 0px #ecf0f1 !important;
+}
 .text__title{
     text-transform: uppercase;
 }
@@ -8,6 +11,22 @@
 .box__article{
     cursor: pointer;
     .card-image{
+        overflow: hidden;
+    }
+    .card-highlight{
+
+        &:before{
+            content: url(/icons/noi-bat.svg);
+            position: absolute;
+            height: 25px;
+            left: -4px;
+            top: 10px;
+            width: 65px;
+            z-index: 1;
+        }
+    }
+    .card-post{
+        border-radius: 20px;
         overflow: hidden;
     }
     .card__article__body{
@@ -38,12 +57,27 @@
         }
     }
     .card-img-top{
+        position: relative;
         height: 200px;
         object-fit: cover;
         transition: 0.7s;
+        width: 100%;
+        display: block;
+    }
+    .card-img-post{
+        height: 270px;
+        transition: 0.7s;
+        object-fit: cover;
+        width: 100%;
+        display: block;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
     }
     &:hover .card-img-top{
        transform: scale(1.1);
+    }
+    &:hover .card-img-post{
+        transform: scale(1.1);
     }
     @media only screen and (max-width: 768px){
         .card-img-top{
