--- a/resources/sass/customer/layout/_main.scss
+++ b/resources/sass/customer/layout/_main.scss
@@ -22,6 +22,14 @@ select {
     display: -webkit-box;
     -webkit-line-clamp: 2;
 }
+.text-split-3{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp:3;
+}
 .text-split-1{
     overflow: hidden;
     text-overflow: ellipsis;
