--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -35,6 +35,7 @@
 @import './layout/grid';
 @import './layout/footer';
 @import './layout/modal';
+@import './layout/breadcumbs';
 
 /**======================*
     Import components
