--- a/resources/sass/customer/abstracts/_variables.scss
+++ b/resources/sass/customer/abstracts/_variables.scss
@@ -1,4 +1,5 @@
 $primary: #3498DB; // Màu chủ đạo
-$font-primary: 16px; // cỡ chữ chủ đạo
 $black: #000;
 $default-errors: red;
+// ============
+$font-primary: 16px; // cỡ chữ chủ đạo
