--- a/resources/sass/customer/layout/_header.scss
+++ b/resources/sass/customer/layout/_header.scss
@@ -38,3 +38,22 @@ header {
         }
     }
 }
+
+
+/* Extra small devices (phones, 992px and down) */
+
+@media only screen and (max-width: 992px) {
+    .navbar {
+        ul {
+            li {
+                padding-top: 20px;
+            }
+        }
+        .navbar-collapse {
+            padding-bottom: 30px;
+        }
+        .box__auth {
+            margin-left: 20px
+        }
+    }
+}
