--- a/resources/sass/customer/pages/_detail_post.scss
+++ b/resources/sass/customer/pages/_detail_post.scss
@@ -297,6 +297,58 @@
             border-bottom: 1px solid #f2f2f2;
         }
     }
+    .b__ct {
+        color: #2c3e50;
+        padding: 20px 5px;
+        border: 1px solid #ecf0f1;
+        text-align: center;
+        border-radius: 10px;
+        .b__ct-info {
+            padding-bottom: 20px;
+            .b__ct-info-avt {
+                width: 100px;
+                border-radius: 50%;
+                margin-bottom: auto;
+            }
+            .b__ct-info-name {
+                font-size: 17px;
+            }
+        }
+        .b__ct-contact {
+            .b__ct-contact-btn {
+                padding: 10px 15px;
+                border-radius: 25px;
+                border: 1px solid #ecf0f1;
+                background: none;
+                min-width: 150px;
+                margin: 0;
+                display: inline-block;
+                margin-bottom: 10px;
+                font-weight: 500;
+            }
+            .b__ct-contact-btn:nth-child(1) {
+                background-color: #1abc9c;
+                color: #fff;
+            }
+            .b__ct-contact-btn:nth-child(3) {
+                color: #2c3e50;
+            }
+            .b__ct-contact-btn:hover{
+                border-color: #1abc9c;
+                box-shadow: 0 5px 10px 2px #1abc9c33 !important;
+            }
+        }
+    }
+    #contactModal {
+        border-radius: 10px;
+        .modal-body{
+            padding: 30px 30px 50px;
+        }
+        .btn__send__contact{
+            box-shadow: 0 5px 10px 2px #3498db59 !important;
+            font-weight: bold;
+        }
+    }
     @media only screen and (max-width: 768px) {
         .mySlides {
             img {
