--- a/resources/sass/customer/layout/_header.scss
+++ b/resources/sass/customer/layout/_header.scss
@@ -1,11 +1,14 @@
 header {
-    box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.08);
     position: sticky;
-    top: 0;
+    top: -1px;
     left: 0;
     width: 100%;
     z-index: 1001;
     background: $white;
+    .box__auth{
+        display: inherit;
+    }
     .navbar {
         z-index: 1001;
         .logo {
@@ -52,8 +55,12 @@ header {
         .navbar-collapse {
             padding-bottom: 30px;
         }
-        .box__auth {
-            margin-left: 20px
-        }
+    }
+    .box__auth {
+        //margin-left: 20px;
+    }
+    .account__manage{
+        padding-left: 0;
+        margin-bottom: 15px;
     }
 }
