--- a/resources/sass/customer/layout/_filter.scss
+++ b/resources/sass/customer/layout/_filter.scss
@@ -64,19 +64,28 @@
 
 @media only screen and (max-width: 900px){
 
-    .filter__btns{
+    .filter__btns {
         text-align: center;
-        padding-top: 20px;
+        position: sticky !important;
+        width: 100%;
+        bottom: -10px;
+        padding: 5px;
+        background: #fff;
         .btn__search{
             background-color: #2980b9;
             box-shadow: 0 5px 10px 2px #3498db40 !important;
             color: #fff !important;
         }
     }
-    .filter-btn{
+    .filter-btn {
         display:  block;
-        .close{
-            display: none;
+        &.filter-btn-close{
+            position: absolute;
+            right: 4px;
+            top: 4px;
+            i{
+                font-size: 0.8rem;
+            }
         }
     }
 
@@ -86,10 +95,24 @@
         text-transform: uppercase;
     }
     .filter{
-        display: none;
+        position: fixed;
+        top: -1px;
+        transition: all 0.4s ease-in-out;
+        z-index: 10003;
+        background: #fff;
+        box-shadow: 1px 10px 18px #99999957;
+        width: 320px;
+        height: 100vh;
+        overflow-y: auto;
+        left: -340px;
+        padding-bottom: 10px;
+        max-width: 100vw;
+        &.open{
+            left: 0;
+        }
         .filter-nav{
             display: block;
-            height: 100vh;
+            overflow-y: auto;
             z-index: 99999;
             .filter-item{
                 .list__option{
