--- a/resources/sass/customer/layout/_filter.scss
+++ b/resources/sass/customer/layout/_filter.scss
@@ -18,6 +18,11 @@
             color: #fff !important;
         }
     }
+    #frm-search{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     .filter-nav {
         display: flex;
         justify-content: center;
@@ -29,6 +34,7 @@
             cursor: pointer;
             min-width: 150px;
             padding: 5px 10px;
+            border-right: 1px solid #ecf0f1;
             .filter-link {
                 font-size: 0.8rem;
                 color: #2c3e50;
@@ -43,9 +49,6 @@
                     border-color: unset !important;
                     box-shadow: unset !important;
                 }
-            }
-            &:not(:last-child){
-                border-right: 1px solid #ecf0f1;
             }
         }
     }
@@ -71,6 +74,7 @@
         bottom: -10px;
         padding: 5px;
         background: #fff;
+        z-index: 100904;
         .btn__search{
             background-color: #2980b9;
             box-shadow: 0 5px 10px 2px #3498db40 !important;
@@ -110,7 +114,12 @@
         &.open{
             left: 0;
         }
+        #frm-search{
+            flex-direction: column;
+            width: 100%;
+        }
         .filter-nav{
+            width: 100%;
             display: block;
             overflow-y: auto;
             z-index: 99999;
