--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -45,6 +45,7 @@
 @import './components/forms';
 @import './components/line';
 @import './components/data-list';
+@import './components/action_menu_mobile';
 
 /**======================*
     Import pages
