--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -53,5 +53,6 @@
 
 @import './pages/post';
 @import './pages/detail_post';
+@import './pages/list_article';
 @import './pages/article';
 @import './pages/personal_article';
