--- a/resources/sass/customer/base/_reset.scss
+++ b/resources/sass/customer/base/_reset.scss
@@ -10,11 +10,14 @@ a {
     text-decoration: none;
 }
 
+li:not(.ck-content li) {
+    list-style: none;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
 }
 
 .btn {
